environment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-nginx
  template:
    metadata:
      labels:
        app: react-nginx
    spec:
      containers:
      - name: react-nginx
        image: ispm19/myrepo:18
        ports:
        - containerPort: 80
