environment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-nginx-service
spec:
  type: ClusterIP
  selector:
    app: react-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
